--- a/Store-onlayn/index.html
+++ b/Store-onlayn/index.html
@@ -176,8 +176,8 @@
               <p class="card_title">Смартфон Samsung Galaxy
                 A52 White 128Gb</p>
               <div class="card_price">
-                <p class="price">3 619 000 сум</p>
-                <span class="data_price">От 418 000 сум / 12 мес</span>
+                <p class="price">3 619 000</p>
+                <span class="data_price">От 418 000 / 12</span>
               </div>
             </a>
             <div class="card_button">
